# my-parser

./: my-parser.cabal
src/: MyParser.hs
src/MyParser/: Numeral.hs  String.hs  Text.hs
