name:                my-parser
version:             0.1
synopsis:            parsers for utility
description:         Please see README.md
homepage:            http://www.tcslab.csce.kyushu-u.ac.jp/~fuji/
license:             BSD3
license-file:        LICENSE
author:              wkoiking
maintainer:          wanagida@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyParser, MyParser.Text, MyParser.String, MyParser.Numeral
  build-depends:       base >= 2.0, parsec >= 3.1.2, text >= 0.11.1.5
  default-language:    Haskell2010

  -- Modules not exported by this package.
  -- other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- build-tools:         

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/my-project
